[package]
name = "ecuder_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.21", features = ["derive"]}
chrono = "0.4.38"
serde_json = "1.0.117"
thiserror = "1.0.60"

tokio = { version = "1.37.0" , features = ["full"]}
axum = "0.7.5"