[package]
name = "ecuder_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "auth_server"
path = "src/main.rs"
[[bin]]
name = "generate_key_info"
path = "src/generate_key_info.rs"

[dependencies]
lazy_static = "1.4.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.21", features = ["derive"]}
chrono = "0.4.38"
serde_json = "1.0.117"
thiserror = "1.0.60"
sha2 = "0.10.8"

rand = "0.8.5"

tokio = { version = "1.37.0" , features = ["full"]}
axum = "0.7.5"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors"]}